--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     }
   ],
   "require": {
-    "php": "^8.3"
+    "php": "^8.3",
+    "charcoal-dev/base": ">=0.0.1 <0.1.0"
   },
   "autoload": {
     "psr-4": {
